# astrbot_practical_plugin_collection

./: AGENTS.md  README.md  _conf_schema.json  main.py  metadata.yaml  pyproject.toml
.agents/skills/astrbot-plugin-reviewer/: SKILL.md
core/: __init__.py  ban.py
core/ban/: command.py  main.py
core/economic/: db.py
module/: __init__.py
module/group_request_review/: log.py  main.py
module/utils/: __init__.py  api.py  filter.py  function.py
utils/: __init__.py  filter.py  function.py
utils/api/: __init__.py  api.py
utils/message/: __init__.py  msg.py
