[project]
name = "AstrBot-Practical-Plugin-Collection"
version = "0.1.0"
description = "AstrBot 实用插件合集"
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "aiosqlite>=0.22.1",
    "astrbot>=4.17.6",
    "isort>=8.0.1",
]

[dependency-groups]
dev = ["ruff>=0.15.13"]
